--- a/index.html
+++ b/index.html
@@ -195,9 +195,11 @@
         var navLink = document.getElementById("navLink");
         function showMenu(){
             navLink.style.right = "0";
+            navLink.style.display = "block";
         }
         function hideMenu(){
             navLink.style.right = "-200px";
+            navLink.style.display = "none";
         }
 
     </script>
